--- a/about/about.css
+++ b/about/about.css
@@ -58,8 +58,8 @@
   nav ul li a:hover::after {
     width: 100%;
   }
-  /*Contact*/
-  #contact {
+/*About*/  
+#about {
     margin-top: 5px;
     padding: 5px 0;
     color: #ababab;
@@ -71,76 +71,58 @@
     justify-content: space-between;
     flex-wrap: wrap;
   }
+  .about-col-1 {
+    flex-basis: 35%;
+  }
+  .about-col-1 img {
+    width: 100%;
+    border-radius: 15px;
+  }
+  .about-col-2 {
+    flex-basis: 60%;
+  }
   .sub-title {
     font-size: 60px;
     font-weight: 600;
-    margin-top: 75px;
+    margin-top: 15px;
+    margin-bottom: 5px;
     color: #fff;
   }
-  .contact-left{
-    flex-basis: 35%;
+  .tab-titles {
+    display: flex;
+    margin: 20px 0 40px;
   }
-  .contact-right{
-    flex-basis: 60%;
-  }
-  .contact-left p{
-    margin-top: 30px;
-  }
-  .contact-left p i{
-    color: #d69e3b;
-    margin-right: 15px;
-    font-size: 25px;
-  }
-  .social-icons{
-    margin-top: 30px;
-  }
-  .social-icons a{
-    text-decoration: none;
-    font-size: 30px;
-    margin-right: 15px;
-    color: #ababab;
-    display: inline-block;
-    transition: transform 0.5s;
-  }
-  .social-icons a:hover{
-    color: #d69e3b;
-    transform: translateY(-5px);
-  }
-  .btn{
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #d69e3b;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background 0.5s;
-  }
-  .btn:hover{
-    background: #d69e3b;
-  }
-  .btn.btn2{
-    display: inline-block;
-    background: #d69e3b;
-  }
-  .contact-right form{
-    width: 100%;
-  }
-  form input, form textarea{
-    width: 100%;
-    border: 0;
-    outline: none;
-    background: #262626;
-    padding: 15px;
-    margin: 15px 0;
-    color: #fff;
+  .tab-links {
+    margin-right: 50px;
     font-size: 18px;
-    border-radius: 6px;
-  }
-  form .btn2{
-    padding: 14px 60px;
-    font-size: 18px;
-    margin-top: 20px;
+    font-weight: 500;
     cursor: pointer;
+    position: relative;
+  }
+  .tab-links::after {
+    content: "";
+    width: 0;
+    height: 3px;
+    background-color: #d69e3b;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+  }
+  .tab-links.active-link::after {
+    width: 50%;
+  }
+  .tab-contents ul li{
+  list-style: none;
+  margin: 10px 0;
+  }
+  .tab-contents ul li span{
+  color: #AC8849;
+  font-size: 14px;
+  }
+  .tab-contents{
+    display: none;
+  }
+  .tab-contents.active-tab{
+    display: block;
   }
