--- a/home/index.css
+++ b/home/index.css
@@ -1,3 +1,4 @@
+/*Navbar*/  
 * {
   margin: 0;
   padding: 0;
@@ -18,11 +19,11 @@ body {
 .container {
   padding: 10px 10%;
 }
-.header-background{
-    background-color: rgb(0, 0, 0,0.9);
-    width: fit-content;
-    margin-left: 63%;
-    border-radius: 10px;
+.header-background {
+  background-color: rgb(0, 0, 0, 0.9);
+  width: fit-content;
+  margin-left: 58%;
+  border-radius: 10px;
 }
 nav {
   display: flex;
@@ -57,14 +58,15 @@ nav ul li a::after {
 nav ul li a:hover::after {
   width: 100%;
 }
-.header-text{
-    margin-top: 20%;
-    font-size: 20px;
+/*Header*/  
+.header-text {
+  margin-top: 20%;
+  font-size: 20px;
 }
-.header-text h1{
-    font-size: 60px;
-    margin-top: 20px;
+.header-text h1 {
+  font-size: 60px;
+  margin-top: 20px;
 }
-.header-text h1 span{
-    color: #d69e3b;
+.header-text h1 span {
+  color: #d69e3b;
 }
