--- a/about/about.css
+++ b/about/about.css
@@ -22,7 +22,7 @@
   .header-background {
     background-color: rgb(0, 0, 0, 0.9);
     width: fit-content;
-    margin-left: 58%;
+    margin-left: 55%;
     border-radius: 10px;
   }
   nav {
@@ -61,7 +61,7 @@
 /*About*/  
 #about {
     margin-top: 5px;
-    padding: 5px 0;
+    padding: 15px 0 100px;
     color: #ababab;
     background-color: rgb(0, 0, 0, 0.8);
     border-radius: 20px;
