--- a/projects/projects.css
+++ b/projects/projects.css
@@ -22,7 +22,7 @@
   .header-background {
     background-color: rgb(0, 0, 0, 0.9);
     width: fit-content;
-    margin-left: 58%;
+    margin-left: 55%;
     border-radius: 10px;
   }
   nav {
@@ -58,3 +58,63 @@
   nav ul li a:hover::after {
     width: 100%;
   }
+
+  /*Projects*/
+  #projects {
+    margin-top: 5px;
+    padding: 30px 0 100px;
+    color: #ababab;
+    background-color: rgb(0, 0, 0, 0.8);
+    border-radius: 20px;
+  }
+  .sub-title {
+    font-size: 60px;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    color: #fff;
+  }
+  .projects-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+  }
+  .projects-list div{
+    background-color: #262626;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+  }
+  .projects-list div p{
+    color: aliceblue;
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+  .projects-list div a i{
+    font-size: 15px;
+    margin-bottom: 15px;
+    margin-right: 8px;
+  }
+  .projects-list div a:hover{
+    color: #262626;
+  }
+  .projects-list div h2{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+  }
+  .projects-list div a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+    display: inline;
+  }
+  .projects-list div:hover{
+    background: #d69e3b;
+    transform: translateY(-10px);
+  }
+  
