--- a/contact/contact.css
+++ b/contact/contact.css
@@ -138,9 +138,47 @@
     font-size: 18px;
     border-radius: 6px;
   }
-  form .btn2{
+  .btn2{
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
+    cursor: pointer;
+  }
+  /*Popup*/
+  .popup{
+    width: 400px;
+    background: #080808;
+    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0.1);
+    text-align: center;
+    padding: 30px 30px 30px;
+    color: #fff;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+  }
+  .open-popup{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%,-50%) scale(1);
+    
+  }
+  .popup h2{
+    font-size: 38px;
+    font-weight: 500;
+    margin: 30px 0 10px;
+  }
+  .popup button{
+    width:  100%;
+    margin-top: 50px;
+    padding: 10px 0;
+    background: #d69e3b;
+    color: #fff;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    border-radius: 4px;
     cursor: pointer;
   }
